--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cihuy
+name: SmartShopApp
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,14 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    assets:
-      - assets/img/1.jpg
-      - assets/img/2.jpg
-      - assets/img/3.jpg
-      - assets/img/4.jpg
-      - assets/img/5.jpg
-      - assets/img/6.jpg
-      - assets/img/7.jpg
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +55,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/img/1.jpg
+    - assets/img/2.jpg
+    - assets/img/3.jpg
+    - assets/img/4.jpg
+    - assets/img/5.png
+    - assets/img/6.jpg
+    - assets/img/7.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
