--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "cihuy",
-    "short_name": "cihuy",
+    "name": "FruitSmart",
+    "short_name": "FruitSmart",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
