--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  hugeicons: ^0.0.7
+  google_nav_bar: ^5.0.7
   firebase_core: ^3.6.0
   firebase_analytics: ^11.3.3
   flutter_riverpod: ^2.5.3
