--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   provider: ^6.1.2
   firebase_auth: ^5.3.1
   pigeon: ^22.6.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
