--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   pigeon: ^22.6.0
   carousel_slider: ^5.0.0
   flutter_dotenv: ^5.2.1
+  supabase_flutter: ^2.8.0
 
 dev_dependencies:
   flutter_test:
