profile img database

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   supabase_flutter: ^2.8.0
   image_picker: ^1.1.2
-  permission_handler: ^11.3.1
+  shared_preferences: ^2.3.3
   uuid: ^4.5.1
 
 dev_dependencies:
