--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.3.3
   uuid: ^4.5.1
+  html: ^0.15.5
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
