--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.3.3
   uuid: ^4.5.1
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
